# CUDAatscale_image_processing

./: .gitignore  CMakeLists.txt  Makefile  README.md
Include/: image_processing.h  main.cuh  main.h
src/: image_processing.cu  main.cpp  main.cu
